--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --watch --allow-env --allow-sys --allow-net src/main.ts"
+    "dev": "deno run --watch --allow-env --allow-sys --allow-net --allow-read src/main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
