--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,14 @@ services:
     build: .
     ports:
       - "3000:3000"
+    environment:
+      - REDIS_HOST=redis
     env_file:
       - .env
     depends_on:
       - redis
     # Garante que o Deno tenha as permissões necessárias
-    command: ["deno", "run", "--allow-net", "--allow-env", "--allow-read", "src/main.ts"]
+    command: [ "deno", "run", "--allow-net", "--allow-env", "--allow-read", "--allow-sys", "src/main.ts" ]
 
   redis:
     image: "redis:7-alpine"
