--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,20 +6,30 @@ services:
     container_name: oichat-api
     ports:
       - "3001:3001"
-    environment:
-      - PROJECT_BASEURL=${PROJECT_BASEURL}
-      - SUPABASE_URL=${SUPABASE_URL}
-      - SUPABASE_KEY=${SUPABASE_KEY}
-      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
-      - OPENROUTER_API_BASE=${OPENROUTER_API_BASE}
-      - MODEL_NAME=${MODEL_NAME}
-      - EVOLUTION_API_KEY=${EVOLUTION_API_KEY}
-      - EVOLUTION_API_URL=${EVOLUTION_API_URL}
-      - PORT=3001
     env_file:
       - .env
+    environment:
+      - PORT=3001
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - REDIS_PASSWORD=
+      - REDIS_URL=redis://redis:6379
+    depends_on:
+      - redis
     restart: always
     volumes:
       - .:/app
       - /app/node_modules
     command: [ "run", "--allow-net", "--allow-read", "--allow-env", "--watch", "src/main.ts" ]
+
+  redis:
+    image: redis:alpine
+    container_name: oichat-redis
+    ports:
+      - "6379:6379"
+    restart: always
+    volumes:
+      - redis_data:/data
+
+volumes:
+  redis_data:
